# hiapi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: callback_server.py  run_and_poll.py
src/hiapi/: __init__.py  _transport.py  client.py  errors.py  models.py  webhooks.py
src/hiapi/resources/: tasks.py
tests/: _server.py  conftest.py  test_client.py  test_contract.py  test_tasks.py  test_webhooks.py
